RESOLVED FIXED109634
[chromium] Request WebLayerTreeView for DumpRenderTree via explicit testing path
https://bugs.webkit.org/show_bug.cgi?id=109634
Summary [chromium] Request WebLayerTreeView for DumpRenderTree via explicit testing path
James Robinson
Reported 2013-02-12 17:00:11 PST
[chromium] Request WebLayerTreeView for DumpRenderTree via explicit testing path
Attachments
Patch (4.28 KB, patch)
2013-02-12 17:03 PST, James Robinson
no flags
Patch (6.48 KB, patch)
2013-02-12 18:23 PST, James Robinson
no flags
Patch (6.38 KB, patch)
2013-02-13 16:30 PST, James Robinson
enne: review+
James Robinson
Comment 1 2013-02-12 17:03:01 PST
James Robinson
Comment 2 2013-02-12 18:23:59 PST
James Robinson
Comment 3 2013-02-13 16:30:53 PST
WebKit Review Bot
Comment 4 2013-02-13 16:37:08 PST
Please wait for approval from abarth@webkit.org, dglazkov@chromium.org, fishd@chromium.org, jamesr@chromium.org or tkent@chromium.org before submitting, as this patch contains changes to the Chromium public API. See also https://trac.webkit.org/wiki/ChromiumWebKitAPI.
Adrienne Walker
Comment 5 2013-02-13 17:16:35 PST
Comment on attachment 188218 [details] Patch R=me.
James Robinson
Comment 6 2013-02-13 18:31:59 PST
WebKit Review Bot
Comment 7 2013-02-14 01:01:50 PST
Re-opened since this is blocked by bug 109791
Andrew Wilson
Comment 8 2013-02-14 01:21:35 PST
Seeing some crashes on the chrome canaries (webkit_unit_tests) http://build.chromium.org/p/chromium.webkit/builders/Android%20Tests%20%28dbg%29/builds/6453/steps/webkit_unit_tests/logs/stdio: [==========] Running 176 tests from 36 test cases. [----------] Global test environment set-up. [----------] 1 test from GraphicsLayerChromiumTest [ RUN ] GraphicsLayerChromiumTest.updateLayerPreserves3DWithAnimations ASSERTION FAILED: m_layerTreeView third_party/WebKit/Source/WebKit/chromium/tests/GraphicsLayerChromiumTest.cpp(66) : (anonymous namespace)::GraphicsLayerChromiumTest::GraphicsLayerChromiumTest() [ CRASHED ]
James Robinson
Comment 9 2013-02-14 10:58:13 PST
D'oh, changed the caller to the new interface before implementing it on the chromium side. Will reland with a fix.
James Robinson
Comment 10 2013-02-14 14:12:46 PST
I have a fix, but Adam pointed out we can statically link webkit_support into DRT and use that instead of adding a new Platform path for DRT. I'll try that and leave the unit test path alone (that one has to go through Platform API since it's inside WebKit.dll)
James Robinson
Comment 11 2013-02-20 18:11:31 PST
Note You need to log in before you can comment on or make changes to this bug.