[chromium] Request WebLayerTreeView for DumpRenderTree via explicit testing path https://bugs.webkit.org/show_bug.cgi?id=109634

Reviewed by Adrienne Walker.

Source/Platform:

* chromium/public/WebUnitTestSupport.h:

Tools:

* DumpRenderTree/chromium/WebViewHost.cpp:
(WebViewHost::createOutputSurface):
(WebViewHost::initializeLayerTreeView):

Canonical link: https://commits.webkit.org/128061@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142841 268f45cc-cd09-0410-ab3c-d52691b4dbfc