Source/Platform/chromium/public/WebUnitTestSupport.h
@@ -32,6 +32,7 @@
 namespace WebKit {
 
 class WebLayerTreeView;
+class WebLayerTreeViewClient;
 class WebURL;
 class WebURLResponse;
 struct WebURLError;
@@ -62,9 +63,11 @@ public:
 #define HAVE_CREATELAYERTREEVIEWFORTESTING 1
     enum TestViewType {
         TestViewTypeUnitTest,
-        TestViewTypeLayoutTest
+        TestViewTypeLayoutTestSoftware,
+        TestViewTypeLayoutTest3d,
     };
-    virtual WebLayerTreeView* createLayerTreeViewForTesting(TestViewType type) { return 0; }
+    virtual WebLayerTreeView* createLayerTreeViewForTesting(TestViewType, WebLayerTreeViewClient*) { return 0; }
+    virtual WebLayerTreeView* createLayerTreeViewForTesting(TestViewType) { return 0; }
 };
 
 }
