Source/WebKit/chromium/tests/ScrollingCoordinatorChromiumTest.cpp
@@ -59,7 +59,7 @@ public:
 
     virtual void initializeLayerTreeView(WebLayerTreeViewClient* client, const WebLayer& rootLayer, const WebLayerTreeView::Settings& settings)
     {
-        m_layerTreeView = adoptPtr(Platform::current()->unitTestSupport()->createLayerTreeViewForTesting(WebUnitTestSupport::TestViewTypeUnitTest));
+        m_layerTreeView = adoptPtr(Platform::current()->unitTestSupport()->createLayerTreeViewForTesting(WebUnitTestSupport::TestViewTypeUnitTest, 0));
         ASSERT(m_layerTreeView);
         m_layerTreeView->setRootLayer(rootLayer);
     }
